@@ -1069,12 +1069,12 @@ Usage: grub-mkimage -o FILE [OPTION]... [MODULES]\n\
 \n\
 Make a bootable image of GRUB.\n\
 \n\
--d, --directory=DIR     use images and modules under DIR [default=%s]\n\
--p, --prefix=DIR        set grub_prefix directory [default=%s]\n\
--o, --output=FILE       output a generated image to FILE\n\
--h, --help              display this message and exit\n\
--V, --version           print version information and exit\n\
--v, --verbose           print verbose messages\n\
+  -d, --directory=DIR     use images and modules under DIR [default=%s]\n\
+  -p, --prefix=DIR        set grub_prefix directory [default=%s]\n\
+  -o, --output=FILE       output a generated image to FILE\n\
+  -h, --help              display this message and exit\n\
+  -V, --version           print version information and exit\n\
+  -v, --verbose           print verbose messages\n\
 \n\
 Report bugs to <%s>.\n\
 ", GRUB_LIBDIR, DEFAULT_DIRECTORY, PACKAGE_BUGREPORT);
